--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -531,7 +531,7 @@ table {
 body {
   padding: 0px 0 20px 0px;
   margin: 0px;
-  font: 14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 20px/1.6 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #f0e7d5;
   font-weight: normal;
   background: #252525;
@@ -556,15 +556,15 @@ p, ul, ol, table, pre, dl {
 }
 
 h1, h2, h3 {
-  line-height: 1.1;
+  line-height: 1.1em;
 }
 
 h1 {
-  font-size: 28px;
+  font-size: 2em;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 1.8em;
 }
 
 h4, h5, h6 {
@@ -572,8 +572,8 @@ h4, h5, h6 {
 }
 
 h3 {
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 1.4em;
+  line-height: 1.3em;
   font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   font-weight: normal;
   color: #b6b6b6;
@@ -605,7 +605,7 @@ strong {
 }
 
 .wrapper {
-  max-width: 650px;
+  max-width: 800px;
   margin: 0 auto;
   position: relative;
   padding: 0 20px;
@@ -625,7 +625,8 @@ blockquote {
 code {
   font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color: #efefef;
-  font-size: 13px;
+  background: #191919;
+  font-size: 0.8em;
   margin: 0 4px;
   padding: 4px 6px;
   -moz-border-radius: 2px;
@@ -634,6 +635,11 @@ code {
   -ms-border-radius: 2px;
   -khtml-border-radius: 2px;
   border-radius: 2px;
+  border: 1px solid #121212;
+  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+  -o-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
 pre {
@@ -781,7 +787,6 @@ dt {
 }
 
 section {
-  max-width: 650px;
   padding: 30px 0px 50px 0px;
   margin: 20px 0;
   margin-top: 70px;
@@ -795,9 +800,9 @@ section #title {
 section #title h1 {
   font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
-  font-size: 40px;
+  font-size: 2.5em;
   text-align: center;
-  line-height: 36px;
+  line-height: 1.2em;
 }
 section #title p {
   color: #d7cfbe;
@@ -807,7 +812,7 @@ section #title p {
   text-align: center;
 }
 section #title .credits {
-  font-size: 11px;
+  font-size: 0.8em;
   font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #696969;
@@ -821,6 +826,11 @@ section #title .credits.right {
 }
 
 @media print, screen and (max-width: 720px) {
+
+  body {
+    font: 18px/1.6 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+
   #title .credits {
     display: block;
     width: 100%;
@@ -837,6 +847,11 @@ section #title .credits.right {
   }
 }
 @media print, screen and (max-width: 480px) {
+
+  body {
+    font: 16px/1.6 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+
   #header {
     margin-top: -20px;
   }
