--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -622,6 +622,15 @@ blockquote {
   font-style: italic;
 }
 
+figcaption {
+  font-size: 0.8em;
+  text-align: center;
+  margin-bottom: 0.6em;
+  background-color: rgb(90, 90, 90);
+  border: 1px solid #121212;
+  border-radius: 2px;
+}
+
 code {
   font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color: #efefef;
