--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -710,12 +710,8 @@ dt {
 }
 
 #header {
-  z-index: 100;
-  left: 0;
-  top: 0px;
   height: 60px;
   width: 100%;
-  position: fixed;
   background: url(../images/nav-bg.gif) #353535;
   border-bottom: 4px solid #434343;
   -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
@@ -795,10 +791,16 @@ dt {
   font-size: 11px;
 }
 
+#toc {
+  position: fixed;
+  margin-top: 80px;
+  max-width: 80px;
+  font-size: 14px;
+}
+
 section {
   padding: 30px 0px 50px 0px;
   margin: 20px 0;
-  margin-top: 70px;
 }
 section #title {
   border: 0;
